--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
 *.webp filter=lfs diff=lfs merge=lfs -text
 *.jar filter=lfs diff=lfs merge=lfs -text
+*.png filter=lfs diff=lfs merge=lfs -text
+*.ttf filter=lfs diff=lfs merge=lfs -text
