--- a/ReconnectEd-web/package.json
+++ b/ReconnectEd-web/package.json
@@ -13,6 +13,7 @@
     "@nuxt/eslint": "1.9.0",
     "@nuxt/fonts": "0.11.4",
     "@nuxt/icon": "2.0.0",
+    "@nuxt/ui": "^4.0.1",
     "eslint": "^9.0.0",
     "nuxt": "^4.1.2",
     "vue": "^3.5.22",
