chore: update `.editorconfig` and disable unused linters in `lint.yml`
Signed-off-by: Chris1320 <me@chrisfromnowhere.me>

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -37,3 +37,7 @@ jobs:
               env:
                   # To report GitHub Actions status checks
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+                  # Disable linters we don't use
+                  VALIDATE_GIT_COMMITLINT: false
+                  VALIDATE_BIOME_FORMAT: false
+                  VALIDATE_BIOME_LINT: false
