--- a/.editorconfig
+++ b/.editorconfig
@@ -6,3 +6,11 @@ indent_style = space
 indent_size = 4
 insert_final_newline = true
 max_line_length = 120
+
+[*.{md,yml}]
+max_line_length = off
+
+[bun.lock]
+indent_size = 2
+indent_style = space
+max_line_length = off
