--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -37,6 +37,8 @@ jobs:
               env:
                   # To report GitHub Actions status checks
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+                  FIX_BIOME_FORMAT: false
+                  FIX_BIOME_LINT: false
                   # Disable linters we don't use
                   VALIDATE_GIT_COMMITLINT: false
                   VALIDATE_BIOME_FORMAT: false
