chore: update CodeQL and lint workflows to improve permissions and checkout settings
Signed-off-by: Chris1320 <me@chrisfromnowhere.me>

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -10,6 +10,7 @@
 # supported CodeQL languages.
 #
 name: "CodeQL Advanced"
+permissions: {}
 
 on:
     push:
@@ -56,6 +57,8 @@ jobs:
         steps:
             - name: Checkout repository
               uses: actions/checkout@v4
+              with:
+                  persist-credentials: false
 
             # Add any setup steps before running the `github/codeql-action/init` action.
             # This includes steps like installing compilers or runtimes (`actions/setup-node`
