--- a/ReconnectEd-web/package.json
+++ b/ReconnectEd-web/package.json
@@ -1,22 +1,21 @@
 {
-    "name": "ReconnectED",
-    "type": "module",
-    "private": true,
-    "scripts": {
-        "build": "nuxt build",
-        "dev": "nuxt dev",
-        "generate": "nuxt generate",
-        "preview": "nuxt preview",
-        "postinstall": "nuxt prepare"
-    },
-    "dependencies": {
-        "@nuxt/eslint": "1.9.0",
-        "@nuxt/fonts": "0.11.4",
-        "@nuxt/icon": "2.0.0",
-        "@nuxt/ui": "^4.0.1",
-        "eslint": "^9.0.0",
-        "nuxt": "^4.1.2",
-        "vue": "^3.5.22",
-        "vue-router": "^4.5.1"
-    }
+  "name": "ReconnectED-web",
+  "type": "module",
+  "private": true,
+  "scripts": {
+    "build": "nuxt build",
+    "dev": "nuxt dev",
+    "generate": "nuxt generate",
+    "preview": "nuxt preview",
+    "postinstall": "nuxt prepare"
+  },
+  "dependencies": {
+    "@nuxt/eslint": "1.9.0",
+    "@nuxt/ui": "4.0.1",
+    "eslint": "^9.0.0",
+    "nuxt": "^4.1.3",
+    "typescript": "^5.6.3",
+    "vue": "^3.5.22",
+    "vue-router": "^4.5.1"
+  }
 }
