fix: standardize project name and theme casing to "ReconnectED"
Signed-off-by: Chris1320 <me@chrisfromnowhere.me>

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -15,7 +15,7 @@ updates:
           - "kind > dependencies"
           - "scope > android"
     - package-ecosystem: "bun" # See documentation for possible values
-      directory: "/ReconnectEd-web" # Location of package manifests
+      directory: "/ReconnectED-web" # Location of package manifests
       schedule:
           interval: "daily"
       open-pull-requests-limit: 10
