--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,7 +35,7 @@ jobs:
             - name: Setup Bun
               uses: oven-sh/setup-bun@v2 # zizmor: ignore[unpinned-uses]
               with:
-                  bun-version-file: "${{ github.workspace }}/ReconnectED-web/bun.lock"
+                  bun-version-file: "ReconnectED-web/bun.lock"
 
             - name: Install dependencies
               run: bun install
