--- a/ReconnectED-Android/app/src/main/AndroidManifest.xml
+++ b/ReconnectED-Android/app/src/main/AndroidManifest.xml
@@ -19,9 +19,9 @@
         android:theme="@style/Theme.App.Starting"
         android:name=".ReconnectedApp"
     >
-        <activity android:name=".HomeActivity" android:exported="false" />
+        <activity android:name=".MainActivity" android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".LoginActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.App.Starting"
