--- a/ReconnectED-Android/gradle/libs.versions.toml
+++ b/ReconnectED-Android/gradle/libs.versions.toml
@@ -25,6 +25,7 @@ materialIconsExtended = "1.7.8"
 firebaseUi = "0.1.0"
 googleid = "1.1.1"
 playServicesAuth = "21.4.0"
+firebaseUiAuth = "9.0.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -59,6 +60,7 @@ androidx-compose-material-icons-extended = { group = "androidx.compose.material"
 firebase-ui = { group = "com.firebase", name = "firebase-ui", version.ref = "firebaseUi" }
 googleid = { group = "com.google.android.libraries.identity.googleid", name = "googleid", version.ref = "googleid" }
 play-services-auth = { group = "com.google.android.gms", name = "play-services-auth", version.ref = "playServicesAuth" }
+firebase-ui-auth = { group = "com.firebaseui", name = "firebase-ui-auth", version.ref = "firebaseUiAuth" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
