chore: update `editorconfig`

--- a/.editorconfig
+++ b/.editorconfig
@@ -6,8 +6,15 @@ indent_style = space
 indent_size = 4
 insert_final_newline = true
 max_line_length = 120
+trim_trailing_whitespace = true
+insert_final_newline = true
 
-[*.{md,yml}]
+[LICENSE,*.xml]
+indent_size = off
+max_line_length = off
+
+[*.{md,yml,toml,rules}]
+indent_size = 2
 max_line_length = off
 
 [bun.lock]
