--- a/.editorconfig
+++ b/.editorconfig
@@ -9,11 +9,11 @@ max_line_length = 120
 trim_trailing_whitespace = true
 insert_final_newline = true
 
-[LICENSE,*.xml]
+[{LICENSE,*.xml}]
 indent_size = off
 max_line_length = off
 
-[*.{md,yml,toml,rules}]
+[*.{md,yml,toml,rules,firebaserc}]
 indent_size = 2
 max_line_length = off
 
