--- a/ReconnectED-Android/gradle/libs.versions.toml
+++ b/ReconnectED-Android/gradle/libs.versions.toml
@@ -26,6 +26,7 @@ firebaseUi = "0.1.0"
 googleid = "1.1.1"
 playServicesAuth = "21.4.0"
 firebaseUiAuth = "9.0.0"
+uiTooling = "1.9.3"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -61,6 +62,7 @@ firebase-ui = { group = "com.firebase", name = "firebase-ui", version.ref = "fir
 googleid = { group = "com.google.android.libraries.identity.googleid", name = "googleid", version.ref = "googleid" }
 play-services-auth = { group = "com.google.android.gms", name = "play-services-auth", version.ref = "playServicesAuth" }
 firebase-ui-auth = { group = "com.firebaseui", name = "firebase-ui-auth", version.ref = "firebaseUiAuth" }
+androidx-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling", version.ref = "uiTooling" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
