--- a/ReconnectED-Android/app/src/main/AndroidManifest.xml
+++ b/ReconnectED-Android/app/src/main/AndroidManifest.xml
@@ -19,11 +19,9 @@
         android:theme="@style/Theme.App.Starting"
         android:name=".ReconnectedApp"
     >
-        <activity android:name=".MainActivity" android:exported="false" />
         <activity
-            android:name=".LoginActivity"
+            android:name=".activities.MainActivity"
             android:exported="true"
-            android:label="@string/app_name"
             android:theme="@style/Theme.App.Starting"
             android:noHistory="true"
         >
