ci(lint): disable JSCPD since Kotlin/Java has a lot of boilerplate anyway
Signed-off-by: Chris1320 <me@chrisfromnowhere.me>

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -44,6 +44,7 @@ jobs:
           VALIDATE_BIOME_FORMAT: false
           VALIDATE_BIOME_LINT: false
           VALIDATE_GIT_COMMITLINT: false
+          VALIDATE_JSCPD: false
           VALIDATE_JSON_PRETTIER: false
           VALIDATE_JSON: false
           VALIDATE_MARKDOWN: false
