--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -49,3 +49,4 @@ jobs:
           VALIDATE_JSON: false
           VALIDATE_MARKDOWN: false
           VALIDATE_MARKDOWN_PRETTIER: false
+          TYPESCRIPT_ES_CONFIG_FILE: ReconnectED-web/eslint.config.mjs
