--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,7 +36,22 @@ jobs:
         uses: oven-sh/setup-bun@v2 # zizmor: ignore[unpinned-uses]
 
       - name: Install dependencies
-        run: bun install
+        run: bun install --frozen-lockfile
 
       - name: Build with Nuxt.js
         run: bun run build
+        env:
+          # Used to upload bundle to Codecov for bundle analysis
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+
+      # - name: Run Tests
+      #   run: bun run test
+
+      - name: Upload test results to Codecov
+        if: ${{ !cancelled() }}
+        uses: codecov/test-results-action@v1
+        with:
+          directory: ReconnectED-web/
+          flags: web
+          fail_ci_if_error: true
+          token: ${{ secrets.CODECOV_TOKEN }}
