ci(android): update test workflow to build instead of run tests
Signed-off-by: Chris1320 <me@chrisfromnowhere.me>

--- a/.github/workflows/test-android.yml
+++ b/.github/workflows/test-android.yml
@@ -42,5 +42,5 @@ jobs:
       - name: Grant Execute Permission For gradlew
         run: chmod +x gradlew
 
-      - name: Run Tests
-        run: ./gradlew test
+      - name: Build with Gradle
+        run: ./gradlew build
