ci(android): add step to restore Gradle Wrapper in test workflow
Signed-off-by: Chris1320 <me@chrisfromnowhere.me>

--- a/.github/workflows/test-android.yml
+++ b/.github/workflows/test-android.yml
@@ -42,5 +42,8 @@ jobs:
       - name: Grant Execute Permission For gradlew
         run: chmod +x gradlew
 
+      - name: Restore Gradle Wrapper
+        run: gradle wrapper
+
       - name: Build with Gradle
         run: ./gradlew build --no-daemon
