ci(android): update Gradle Wrapper command to use --no-daemon option
Signed-off-by: Chris1320 <me@chrisfromnowhere.me>

--- a/.github/workflows/test-android.yml
+++ b/.github/workflows/test-android.yml
@@ -43,7 +43,7 @@ jobs:
         run: chmod +x gradlew
 
       - name: Restore Gradle Wrapper
-        run: gradle wrapper
+        run: gradle wrapper --no-daemon
 
       - name: Build with Gradle
         run: ./gradlew build --no-daemon
