build(web,deps): update dependencies in `package.json` to include firebase and nuxt-vuefire
Signed-off-by: Chris1320 <me@chrisfromnowhere.me>

--- a/ReconnectED-web/package.json
+++ b/ReconnectED-web/package.json
@@ -20,8 +20,10 @@
         "@nuxt/ui": "4.1.0",
         "chart.js": "^4.5.1",
         "eslint": "^9.38.0",
+        "firebase": "^12.5.0",
         "motion-v": "^1.7.4",
         "nuxt": "^4.2.0",
+        "nuxt-vuefire": "^1.1.0",
         "typescript": "^5.6.3",
         "vue": "^3.5.22",
         "vue-router": "^4.6.3"
